# lume

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .lldbinit  .rubocop.yml  Cargo.toml  Dockerfile.alpine  Dockerfile.debian  Gemfile  README.md  Rakefile  clippy.toml  lume.gemspec  lumefmt.toml  main.rb  nox.gemspec
arc/: Cargo.toml
arc/src/: errors.rs  lib.rs
ast/: Cargo.toml
ast/src/: ast.rs  lexer.rs  parser.rs
ast/src/parser/: errors.rs
ast/src/snapshots/: ast__lexer__tests__string@unended_string.snap  ast__parser__tests__call_snapshots@empty.snap  ast__parser__tests__call_snapshots@function_empty.snap  ast__parser__tests__call_snapshots@function_generic.snap  ast__parser__tests__call_snapshots@function_param_1.snap  ast__parser__tests__call_snapshots@function_param_2.snap  ast__parser__tests__call_snapshots@method_empty.snap  ast__parser__tests__call_snapshots@method_generic.snap  ast__parser__tests__call_snapshots@method_param_2.snap  ast__parser__tests__call_snapshots@param_1.snap  ast__parser__tests__call_snapshots@param_2.snap  ast__parser__tests__class_snapshots@builtin.snap  ast__parser__tests__class_snapshots@empty.snap  ast__parser__tests__class_snapshots@ext_method.snap  ast__parser__tests__class_snapshots@generic_method.snap  ast__parser__tests__class_snapshots@invalid_name.snap  ast__parser__tests__class_snapshots@method.snap  ast__parser__tests__class_snapshots@operator_method.snap  ast__parser__tests__class_snapshots@property.snap  ast__parser__tests__class_snapshots@property_no_default.snap  ast__parser__tests__class_snapshots@pub_method.snap  ast__parser__tests__class_snapshots@pub_property.snap  ast__parser__tests__conditional_snapshots@else_if_statements.snap  ast__parser__tests__conditional_snapshots@equality_empty.snap  ast__parser__tests__conditional_snapshots@if_else_empty.snap  ast__parser__tests__conditional_snapshots@if_else_if_else_empty.snap  ast__parser__tests__conditional_snapshots@if_else_if_empty.snap  ast__parser__tests__conditional_snapshots@if_empty.snap  ast__parser__tests__conditional_snapshots@if_statement-2.snap  ast__parser__tests__conditional_snapshots@if_statement.snap  ast__parser__tests__conditional_snapshots@if_statements.snap  ast__parser__tests__conditional_snapshots@inequality_empty.snap  ast__parser__tests__conditional_snapshots@unless_else_empty.snap  ast__parser__tests__conditional_snapshots@unless_else_if.snap  ast__parser__tests__conditional_snapshots@unless_empty.snap  ast__parser__tests__conditional_snapshots@unless_statement.snap  ast__parser__tests__enum_snapshots@empty.snap  ast__parser__tests__enum_snapshots@extra_comma.snap  ast__parser__tests__enum_snapshots@missing_comma.snap  ast__parser__tests__enum_snapshots@multiple_variants.snap  (+78 more)
compiler/: Cargo.toml
compiler/arc/: Cargo.toml
compiler/arc/src/: cache.rs  deps.rs  errors.rs  lib.rs  manifest.rs  parser.rs  serializer.rs
compiler/lume_ast/: Cargo.toml
compiler/lume_ast/src/: lib.rs  macros.rs  support.rs  tests.rs
compiler/lume_cli/: Cargo.toml
compiler/lume_cli/src/: error.rs  lib.rs  main.rs  opts.rs  tracing.rs
compiler/lume_cli/templates/: Arcfile
compiler/lume_codegen/: Cargo.toml
compiler/lume_codegen/src/: dwarf.rs  entry.rs  inst.rs  lib.rs  metadata.rs  term.rs  ty.rs  unwind.rs  value.rs
compiler/lume_diag/: Cargo.toml
compiler/lume_diag/src/: handler.rs  lib.rs  render.rs  source.rs
compiler/lume_diag_macros/: Cargo.toml
compiler/lume_diag_macros/src/: args.rs  diagnostic.rs  fmt.rs  lib.rs
compiler/lume_driver/: Cargo.toml
compiler/lume_driver/src/: build.rs  callbacks.rs  check.rs  incremental.rs  lib.rs  pipeline.rs  std.rs  test_support.rs
compiler/lume_errors/: Cargo.toml
compiler/lume_errors/src/: lib.rs
compiler/lume_errors_test/: Cargo.toml
compiler/lume_errors_test/src/: lib.rs
compiler/lume_fuse/: Cargo.toml
compiler/lume_fuse/src/: lib.rs
compiler/lume_hir/: Cargo.toml
compiler/lume_hir/src/: errors.rs  id.rs  lang.rs  lib.rs  lower.rs  macros.rs  map.rs  pretty.rs  stdlib.rs  symbols.rs  visitor.rs
compiler/lume_hir_lower/: Cargo.toml
compiler/lume_hir_lower/src/: attr.rs  def.rs  desugar.rs  errors.rs  expr.rs  generic.rs  generics.rs  item.rs  lib.rs  lit.rs  make.rs  path.rs  pattern.rs  stmt.rs  tests.rs  ty.rs
compiler/lume_infer/: Cargo.toml
compiler/lume_infer/src/: define.rs  errors.rs  instance.rs  lib.rs  stringify.rs
compiler/lume_lexer/: Cargo.toml
compiler/lume_lexer/src/: errors.rs  lib.rs
compiler/lume_linker/: Cargo.toml
compiler/lume_linker/assets/: elf-link.lds
compiler/lume_linker/src/: lib.rs
compiler/lume_lsp/: Cargo.toml
compiler/lume_lsp/src/: diagnostics.rs  lib.rs  listen.rs  listener.rs  pos.rs  server.rs  state.rs  status.rs
compiler/lume_macros/: Cargo.toml
compiler/lume_macros/src/: lib.rs  node_impl.rs
compiler/lume_mir/: Cargo.toml
compiler/lume_mir/src/: fmt.rs  lib.rs  walk.rs
compiler/lume_mir_lower/: Cargo.toml
compiler/lume_mir_lower/src/: expr.rs  lib.rs  pass.rs  passes.rs  stmt.rs  ty.rs
compiler/lume_mir_opt/: Cargo.toml
compiler/lume_mir_opt/src/: lib.rs  pass.rs
compiler/lume_mir_queries/: Cargo.toml
compiler/lume_mir_queries/src/: instance.rs  lib.rs  lookup.rs  opts.rs  patch.rs
compiler/lume_mono/: Cargo.toml
compiler/lume_mono/src/: lib.rs  (+2 more)
compiler/lume_parse/: Cargo.toml
compiler/lume_parser/: Cargo.toml
compiler/lume_query/: Cargo.toml
compiler/lume_query_macros/: Cargo.toml
compiler/lume_session/: Cargo.toml
compiler/lume_span/: Cargo.toml
compiler/lume_state/: Cargo.toml
compiler/lume_tir/: Cargo.toml
compiler/lume_tir_lower/: Cargo.toml
compiler/lume_type_metadata/: Cargo.toml
compiler/lume_typech/: Cargo.toml
compiler/lume_types/: Cargo.toml
compiler/lume_unification/: Cargo.toml
compiler/src/: ast.rs  driver.rs  error.rs  hir.rs  id.rs  lexer.rs  lib.rs  lookup.rs  parser.rs  sources.rs  std.rs  thir.rs  typech.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: lume_lexer.rs  lume_mutation.rs  lume_parser.rs  lume_parser_expr.rs
fuzz/src/: main.rs
(+2631 files in other folders)
