[package]
name = "lume"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[workspace]
members = ["compiler/lume_cli", "tools/*", "fuzz", "vm/lume_runner"]
resolver = "3"

[[bin]]
name = "lume"
path = "src/main.rs"
test = false

[workspace.package]
version = "0.1.1"
rust-version = "1.88.0"
edition = "2024"
authors = ["Max T. Kristiansen <me@maxtrier.dk>"]
license = "MIT"

[workspace.dependencies]
clap = { version = "=4.5.39", features = ["derive"] }
error_snippet = { version = "=0.1.23", features = ["derive"] }
error_snippet_derive = { version = "=0.1.9" }
indexmap = { version = "=2.11.3" }
lume_architect = { git = "https://github.com/lume-lang/architect" }
owo-colors = { version = "=4.2.2" }
tracing = { version = "=0.1.41" }
serde = { version = "=1.0.225", features = ["derive"] }

[features]
tracing-tracy = ["lume_cli/tracing-tracy"]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
wildcard_imports = "allow"
range_plus_one = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
needless_pass_by_value = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[dependencies]
lume_cli = { path = "compiler/lume_cli" }
lume_driver = { path = "compiler/lume_driver" }

[dev-dependencies]
manifold = { path = "tools/manifold" }

[profile.profiling]
inherits = "release"
debug = true
