[package]
name = "lume"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }

[workspace]
members = ["compiler/lume_cli", "tools/*", "fuzz", "rt/lume_runtime"]
resolver = "3"

[[bin]]
name = "lume"
path = "src/main.rs"
test = false

[workspace.package]
version = "0.1.1"
rust-version = "1.88.0"
edition = "2024"
authors = ["Max T. Kristiansen <me@maxtrier.dk>"]
license = "MIT"

[workspace.dependencies]
clap = { version = "=4.5.39", features = ["derive"] }
error_snippet = { version = "=0.2.0" }
error_snippet_derive = { version = "=0.1.10" }
indexmap = { version = "=2.11.3" }
libftrace = { version = "^0", default-features = false }
lume_architect = { git = "https://github.com/lume-lang/architect" }
owo-colors = { version = "=4.2.2" }
serde = { version = "=1.0.225", features = ["derive"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
wildcard_imports = "allow"
range_plus_one = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
needless_pass_by_value = "allow"
redundant_closure_for_method_calls = "allow"
similar-names = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[dependencies]
libftrace = { workspace = true }
lume_cli = { path = "compiler/lume_cli" }
lume_driver = { path = "compiler/lume_driver" }

[dev-dependencies]
manifold = { path = "tools/manifold" }

[features]
tracing = ["lume_cli/tracing", "libftrace/enabled"]

[profile.profiling]
inherits = "release"
debug = true
