[package]
name = "lume"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
default-run = "lume"

[workspace]
members = ["compiler/lume_cli", "crates/*", "tools/bootstrap", "tools/manifold", "tools/grammar", "fuzz", "rt/lume_runtime"]
resolver = "3"

[[bin]]
name = "lume"
path = "src/lume.rs"
test = false

[[bin]]
name = "lume-bootstrap"
path = "src/lume-bootstrap.rs"
test = false

[workspace.package]
version = "0.1.3"
rust-version = "1.88.0"
edition = "2024"
authors = ["Max T. Kristiansen <me@maxtrier.dk>"]
license = "MIT"

[workspace.dependencies]
clap = { version = "=4.5.39", features = ["derive"] }
error_snippet = { version = "=0.2.0" }
error_snippet_derive = { version = "=0.1.10" }
indexmap = { version = "=2.11.3" }
lume_architect = { git = "https://github.com/lume-lang/architect" }
owo-colors = { version = "=4.2.2" }
regex = { version = "=1.11.1" }
semver = { version = "^1", features = ["serde"] }
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = { version = "^1.0.140" }
tracing = { version = "0.1.44", features = ["max_level_trace", "release_max_level_off"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
wildcard_imports = "allow"
range_plus_one = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
return_self_not_must_use = "allow"
wrong_self_convention = "allow"
needless_pass_by_value = "allow"
redundant_closure_for_method_calls = "allow"
similar-names = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[dependencies]
bootstrap = { path = "tools/bootstrap" }
lume_cli = { path = "compiler/lume_cli" }
lume_driver = { path = "compiler/lume_driver" }

[dev-dependencies]
lume_benchmark = { path = "./tools/benchmark" }
lume_errors = { path = "./crates/lume_errors" }

criterion = { version = "0.8.1", features = ["html_reports"] }

[profile.profiling]
inherits = "release"
debug = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
