[package]
name = "arc"
version.workspace = true
edition = "2024"
rust-version.workspace = true

[dependencies]
diag = { path = "../diag" }
diag_macros = { path = "../diag_macros" }
fxhash = "^0.2"
glob = "^0"
semver = { version = "^1", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
toml = "^0"
