[package]
name = "ast"
version.workspace = true
edition = "2024"
rust-version.workspace = true

[dependencies]
diag = { path = "../diag" }
diag_macros = { path = "../diag_macros" }
serde = { version = "1.0.219", features = ["serde_derive"] }

[dev-dependencies]
insta = { version = "1.42.2", features = ["yaml"] }
