[package]
name = "compiler"
version.workspace = true
edition = "2024"
rust-version.workspace = true

[dependencies]
arc = { path = "../arc" }
ast = { path = "../ast" }
derive = { path = "../derive" }
diag = { path = "../diag" }
diag_macros = { path = "../diag_macros" }
fxhash = "^0.2"
serde = { version = "1.0.219", features = ["serde_derive"] }
ron = "0.9"
llvm-sys = { version = "191" }

[dev-dependencies]
insta = { version = "1.42.2", features = ["yaml"] }
