[package]
name = "arc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_errors = { path = "../lume_errors" }
lume_session = { path = "../lume_session" }
lume_span = { path = "../lume_span" }

error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
fxhash = "=0.2.1"
git2 = "0.20.2"
semver = { version = "^1" }
tracing = { workspace = true }
url = "=2.5.4"

[dev-dependencies]
insta = { version = "1.42.2" }

[lints]
workspace = true
