[package]
name = "arc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_errors = { path = "../../crates/lume_errors" }
lume_options = { path = "../../rt/lume_options" }
lume_session = { path = "../lume_session" }
lume_span = { path = "../../crates/lume_span" }

error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
indexmap = { workspace = true }
libftrace = { workspace = true }
pubgrub = { version = "=0.3.0" }
semver = { version = "^1", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
toml = { version = "0.9.6" }
url = "=2.5.4"

[lints]
workspace = true
