[package]
name = "lume_ast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_data_structures = { path = "../../crates/lume_data_structures" }
lume_span = { path = "../../crates/lume_span" }
lume_syntax = { path = "../../crates/lume_syntax" }

[dev-dependencies]
lume_parse = { path = "../lume_parse" }

insta = { version = "1.42.2", features = ["yaml"] }

[lints]
workspace = true
