[package]
name = "lume_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
arc = { path = "../arc" }
lume_driver = { path = "../lume_driver" }
lume_fmt = { path = "../../tools/fmt" }
lume_errors = { path = "../../crates/lume_errors" }
lume_session = { path = "../lume_session", features = ["cli"] }
lume_span = { path = "../../crates/lume_span" }

clap = { workspace = true }
error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
libftrace = { workspace = true }
toml = { version = "0.9.6" }

[lints]
workspace = true
