[package]
name = "lume_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
arc = { path = "../arc" }
lume_driver = { path = "../lume_driver" }
lume_fmt = { path = "../../tools/fmt" }
lume_errors = { path = "../../crates/lume_errors" }
lume_lsp = { path = "../lume_lsp", optional = true }
lume_session = { path = "../lume_session" }
lume_span = { path = "../../crates/lume_span" }
lume_tracing = { path = "../../crates/lume_tracing" }

askama = { version = "0.15.6" }
clap = { workspace = true }
error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
glob = { version = "^0" }
toml = { version = "0.9.6" }
tracing = { workspace = true }

[features]
default = ["lsp"]
lsp = ["dep:lume_lsp"]

[lints]
workspace = true
