[package]
name = "lume_codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_errors = { path = "../lume_errors" }
lume_mir = { path = "../lume_mir" }
lume_session = { path = "../lume_session" }
lume_span = { path = "../lume_span" }
lume_type_metadata = { path = "../lume_type_metadata" }

error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
gimli = { version = "=0.32.1" }
indexmap = { version = "^2.9" }
target-lexicon = { version = "=0.13.2" }
tracing = { workspace = true }

# codegen_llvm
inkwell = { version = "=0.6.0", features = [
    "llvm18-1",
    "target-x86",
    "target-arm",
], optional = true }

# codegen_cranelift
cranelift = { version = "=0.122.0", optional = true }
cranelift-module = { version = "=0.122.0", optional = true }
cranelift-native = { version = "=0.122.0", optional = true }
cranelift-object = { version = "=0.122.0", optional = true }

[features]
codegen_llvm = ["dep:inkwell"]
codegen_cranelift = [
    "dep:cranelift",
    "dep:cranelift-module",
    "dep:cranelift-native",
    "dep:cranelift-object",
]

[lints]
workspace = true
