[package]
name = "lume_codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_errors = { path = "../../crates/lume_errors" }
lume_mir = { path = "../lume_mir" }
lume_options = { path = "../../rt/lume_options" }
lume_session = { path = "../lume_session" }
lume_span = { path = "../../crates/lume_span" }
lume_type_metadata = { path = "../lume_type_metadata" }
gimli = { version = "0.32.3" }
indexmap = { workspace = true }
libftrace = { workspace = true }
object = { version = "0.37", features = ["write"] }
target-lexicon = { version = "=0.13.2" }
cranelift = "=0.127.1"
cranelift-codegen = { version = "=0.127.1", features = ["unwind"] }
cranelift-module = "=0.127.1"
cranelift-native = "=0.127.1"
cranelift-object = { version = "=0.127.1" }

[lints]
workspace = true
