[package]
name = "lume_driver"
version.workspace = true
edition = "2024"
rust-version.workspace = true

[dependencies]
arc = { path = "../arc" }
lume_codegen = { path = "../lume_codegen", optional = true }
lume_errors = { path = "../lume_errors" }
lume_hir = { path = "../lume_hir" }
lume_hir_lower = { path = "../lume_hir_lower" }
lume_infer = { path = "../lume_infer" }
lume_mir = { path = "../lume_mir" }
lume_mir_lower = { path = "../lume_mir_lower" }
lume_session = { path = "../lume_session" }
lume_span = { path = "../lume_span" }
lume_tir = { path = "../lume_tir" }
lume_tir_lower = { path = "../lume_tir_lower" }
lume_typech = { path = "../lume_typech" }
lume_types = { path = "../lume_types" }

error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
rayon = { version = "1.10.0" }
tracing = { workspace = true }

[features]
codegen = [
    "dep:lume_codegen",
    "lume_codegen/codegen_cranelift",
    "lume_codegen/codegen_llvm",
]

[lints]
workspace = true
