[package]
name = "lume_driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
arc = { path = "../arc" }
lume_errors = { path = "../lume_errors" }
lume_fuse = { path = "../lume_fuse" }
lume_hir = { path = "../lume_hir" }
lume_hir_lower = { path = "../lume_hir_lower" }
lume_infer = { path = "../lume_infer" }
lume_jit = { path = "../../vm/lume_jit" }
lume_metadata = { path = "../../crates/lume_metadata" }
lume_mir = { path = "../lume_mir" }
lume_mir_lower = { path = "../lume_mir_lower" }
lume_session = { path = "../lume_session" }
lume_span = { path = "../lume_span" }
lume_tir = { path = "../lume_tir" }
lume_tir_lower = { path = "../lume_tir_lower" }
lume_typech = { path = "../lume_typech" }
lume_types = { path = "../lume_types" }

error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
postcard = { version = "=1.1.3", features = ["alloc"] }
tracing = { workspace = true }

[lints]
workspace = true
