[package]
name = "lume_driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
arc = { path = "../arc" }
lume_errors = { path = "../../crates/lume_errors" }
lume_hir = { path = "../lume_hir" }
lume_hir_lower = { path = "../lume_hir_lower" }
lume_infer = { path = "../lume_infer" }
lume_linker = { path = "../lume_linker" }
lume_metadata = { path = "../../crates/lume_metadata" }
lume_mir = { path = "../lume_mir" }
lume_mir_lower = { path = "../lume_mir_lower" }
lume_mir_opt = { path = "../lume_mir_opt" }
lume_session = { path = "../lume_session" }
lume_span = { path = "../../crates/lume_span" }
lume_tir = { path = "../lume_tir" }
lume_tir_lower = { path = "../lume_tir_lower" }
lume_typech = { path = "../lume_typech" }
lume_types = { path = "../lume_types" }

libftrace = { workspace = true }
postcard = { version = "=1.1.3", features = ["alloc"] }

lume_codegen = { path = "../lume_codegen", optional = true }

[features]
default = ["codegen"]
codegen = ["dep:lume_codegen"]

[lints]
workspace = true
