[package]
name = "lume_fuse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
lume_errors = { path = "../lume_errors" }
lume_mir = { path = "../lume_mir" }
lume_session = { path = "../lume_session" }

dirs = { version = "=6.0.0" }
error_snippet = { workspace = true }
postcard = { version = "=1.1.3", features = ["alloc"] }
rust-embed = { version = "=8.7.0", features = [
    "interpolate-folder-path",
    "include-exclude",
] }

[lints]
workspace = true
