[package]
name = "lume_hir"
version.workspace = true
edition = "2024"
rust-version.workspace = true

[dependencies]
lume_ast = { path = "../lume_ast" }
lume_errors = { path = "../lume_errors" }
lume_macros = { path = "../lume_macros" }
lume_span = { path = "../lume_span" }

error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
indexmap = { version = "^2.9" }
rust-embed = { version = "8.7.0", features = ["interpolate-folder-path"] }

[dev-dependencies]
lume_parser = { path = "../lume_parser" }
insta = { version = "1.42.2", features = ["yaml"] }

[lints]
workspace = true
