[package]
name = "lume_hir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_ast = { path = "../lume_ast" }
lume_errors = { path = "../lume_errors" }
lume_macros = { path = "../lume_macros" }
lume_span = { path = "../lume_span" }

error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
indexmap = { version = "^2.9" }

[dev-dependencies]
lume_parser = { path = "../lume_parser" }
insta = { version = "1.42.2", features = ["yaml"] }

[lints]
workspace = true
