[package]
name = "lume_hir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_ast = { path = "../lume_ast" }
lume_errors = { path = "../../crates/lume_errors" }
lume_macros = { path = "../../crates/lume_macros" }
lume_span = { path = "../../crates/lume_span" }

error_snippet = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
lume_parser = { path = "../lume_parser" }
insta = { version = "1.42.2", features = ["yaml"] }

[lints]
workspace = true
