[package]
name = "lume_hir_lower"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
arc = { path = "../arc" }
lume_ast = { path = "../lume_ast" }
lume_errors = { path = "../../crates/lume_errors" }
lume_hir = { path = "../lume_hir" }
lume_lexer = { path = "../lume_lexer" }
lume_parser = { path = "../lume_parser" }
lume_session = { path = "../lume_session" }
lume_span = { path = "../../crates/lume_span" }

error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
libftrace = { workspace = true }

[dev-dependencies]
lume_errors_test = { path = "../../crates/lume_errors_test" }
lume_parser = { path = "../lume_parser" }
insta = { version = "1.42.2", features = ["yaml"] }

[lints]
workspace = true
