[package]
name = "lume_infer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_errors = { path = "../../crates/lume_errors" }
lume_hir = { path = "../lume_hir" }
lume_session = { path = "../lume_session" }
lume_span = { path = "../../crates/lume_span" }
lume_types = { path = "../lume_types" }

lume_architect = { workspace = true }
error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
levenshtein = { version = "=1.0.5" }
indexmap = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
arc = { path = "../arc" }
lume_errors_test = { path = "../../crates/lume_errors_test" }
lume_hir_lower = { path = "../lume_hir_lower" }
lume_parser = { path = "../lume_parser" }

insta = { version = "1.42.2", features = ["yaml"] }

[lints]
workspace = true
