[package]
name = "lume_lexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_ast = { path = "../lume_ast" }
lume_span = { path = "../../crates/lume_span" }

error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
