[package]
name = "lume_linker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
lume_assets = { path = "../../crates/lume_assets" }
lume_errors = { path = "../../crates/lume_errors" }
lume_mir = { path = "../lume_mir" }
lume_session = { path = "../lume_session" }
lume_trace = { path = "../../crates/lume_trace" }

dirs = { version = "=6.0.0" }
error_snippet = { workspace = true }

[features]
tracing = ["lume_trace/enable"]

[lints]
workspace = true
