[package]
name = "lume_linker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
lume_assets = { path = "../../crates/lume_assets" }
lume_errors = { path = "../../crates/lume_errors" }
lume_mir = { path = "../lume_mir" }
lume_session = { path = "../lume_session" }

dirs = { version = "=6.0.0" }
error_snippet = { workspace = true }
libftrace = { workspace = true }

[lints]
workspace = true
