[package]
name = "lume_lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
lume_driver = { path = "../lume_driver", default-features = false }
lume_errors = { path = "../../crates/lume_errors" }
lume_fmt = { path = "../../tools/fmt" }
lume_hir = { path = "../lume_hir" }
lume_infer = { path = "../lume_infer" }
lume_session = { path = "../lume_session" }
lume_span = { path = "../../crates/lume_span" }
lume_types = { path = "../lume_types" }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
env_logger = { version = "=0.11.8" }
error_snippet = { workspace = true }
indexmap = { workspace = true }
log = { version = "0.4" }
lsp-server = { version = "=0.7.9" }
lsp-types = { version = "=0.97.0" }
serde = { workspace = true }
serde_json = { version = "=1.0.140" }

[lints]
workspace = true
