[package]
name = "lume_mir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]

lume_errors = { path = "../lume_errors" }
lume_span = { path = "../lume_span" }
lume_type_metadata = { path = "../lume_type_metadata" }

indexmap = { version = "^2.9" }
tracing = { workspace = true }

[lints]
workspace = true
