[package]
name = "lume_mir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
lume_errors = { path = "../lume_errors" }
lume_span = { path = "../lume_span" }
lume_type_metadata = { path = "../lume_type_metadata" }
lume_types = { path = "../lume_types" }

indexmap = { workspace = true }
postcard = "=1.1.3"
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[lints]
workspace = true
