[package]
name = "lume_mir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
lume_session = { path = "../lume_session" }
lume_span = { path = "../../crates/lume_span" }
lume_type_metadata = { path = "../lume_type_metadata" }
lume_types = { path = "../lume_types" }

indexmap = { workspace = true }
libftrace = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
