[package]
name = "lume_mir_lower"
version.workspace = true
edition = "2024"
rust-version.workspace = true

[dependencies]
lume_hir = { path = "../lume_hir" }
lume_mir = { path = "../lume_mir" }
lume_span = { path = "../lume_span" }
lume_tir = { path = "../lume_tir" }
lume_typech = { path = "../lume_typech" }
lume_types = { path = "../lume_types" }

indexmap = { version = "^2.9" }

[lints]
workspace = true
