[package]
name = "lume_mir_lower"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_hir = { path = "../lume_hir" }
lume_mir = { path = "../lume_mir" }
lume_session = { path = "../lume_session" }
lume_span = { path = "../lume_span" }
lume_tir = { path = "../lume_tir" }
lume_typech = { path = "../lume_typech" }
lume_types = { path = "../lume_types" }
lume_type_metadata = { path = "../lume_type_metadata" }

indexmap = { workspace = true }

[lints]
workspace = true
