[package]
name = "lume_mir_queries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_mir = { path = "../lume_mir" }
lume_query = { path = "../../crates/lume_query" }
lume_query_macros = { path = "../../crates/lume_query_macros" }
lume_session = { path = "../lume_session" }
lume_span = { path = "../../crates/lume_span" }
lume_typech = { path = "../lume_typech" }
lume_types = { path = "../lume_types" }

indexmap = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
