[package]
name = "lume_mir_queries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_mir = { path = "../lume_mir" }
lume_session = { path = "../lume_session" }
lume_span = { path = "../../crates/lume_span" }
lume_typech = { path = "../lume_typech" }
lume_types = { path = "../lume_types" }

indexmap = { workspace = true }
lume_architect = { workspace = true }
libftrace = { workspace = true }

[lints]
workspace = true
