[package]
name = "lume_parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_ast = { path = "../lume_ast" }
lume_errors = { path = "../../crates/lume_errors" }
lume_lexer = { path = "../lume_lexer" }
lume_span = { path = "../../crates/lume_span" }

error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { version = "1.42.2", features = ["yaml"] }

[lints]
workspace = true
