[package]
name = "lume_parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
lume_errors = { path = "../../crates/lume_errors" }
lume_lexer = { path = "../lume_lexer" }
lume_span = { path = "../../crates/lume_span" }
lume_syntax = { path = "../../crates/lume_syntax" }

tracing = { workspace = true }

[dev-dependencies]
insta = { version = "1.42.2" }

[lints]
workspace = true
