[package]
name = "lume_query"
version.workspace = true
edition = "2024"
rust-version.workspace = true

[dependencies]
lume_query_macros = { path = "../lume_query_macros", optional = true }

once_cell = "=1.21.3"

[features]
default = ["proc_macros"]
proc_macros = ["lume_query_macros"]

[lints]
workspace = true
