[package]
name = "lume_query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
lume_query_macros = { path = "../lume_query_macros", optional = true }

once_cell = "=1.21.3"
tracing = { workspace = true }

[features]
default = ["proc_macros"]
proc_macros = ["lume_query_macros"]

[lints]
workspace = true
