[package]
name = "lume_query_macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = "0.20.11"
once_cell = "=1.21.3"
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.9", features = ["full"] }

[lints]
workspace = true
