[package]
name = "lume_session"
version.workspace = true
edition = "2024"
rust-version.workspace = true

[dependencies]
lume_errors = { path = "../lume_errors" }
lume_query = { path = "../lume_query" }
lume_span = { path = "../lume_span" }

error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
glob = "^0"
indexmap = { version = "=2.9.0" }
petgraph = { version = "=0.8.2" }
rust-embed = { version = "=8.7.0", features = ["interpolate-folder-path"] }
semver = { version = "^1" }
tracing = { workspace = true }

[lints]
workspace = true
