[package]
name = "lume_session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
lume_errors = { path = "../lume_errors" }
lume_query = { path = "../lume_query" }
lume_span = { path = "../lume_span" }

clap = { workspace = true, optional = true }
error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
glob = "^0"
indexmap = { workspace = true }
petgraph = { version = "=0.8.2" }
pubgrub = { version = "=0.3.0" }
rust-embed = { version = "=8.7.0", features = [
    "interpolate-folder-path",
    "include-exclude",
] }
semver = { version = "^1" }
tracing = { workspace = true }

[features]
cli = ["dep:clap"]

[lints]
workspace = true
