[package]
name = "lume_session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
lume_errors = { path = "../../crates/lume_errors" }
lume_span = { path = "../../crates/lume_span" }

clap = { workspace = true, optional = true }
error_snippet = { workspace = true }
error_snippet_derive = { workspace = true }
glob = "^0"
indexmap = { workspace = true }
lume_architect = { workspace = true }
rust-embed = { version = "=8.7.0", features = [
    "interpolate-folder-path",
    "include-exclude",
] }
semver = { version = "^1", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[features]
cli = ["dep:clap"]

[lints]
workspace = true
