[package]
name = "lume_state"
version.workspace = true
edition = "2024"
rust-version.workspace = true

[dependencies]
arc = { path = "../arc" }
lume_diag = { path = "../lume_diag" }
lume_diag_macros = { path = "../lume_diag_macros" }
lume_span = { path = "../lume_span" }
lume_types = { path = "../lume_types" }

indexmap = { version = "^2.9", features = ["serde"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
