[package]
name = "lume_tir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
indexmap = { version = "^2.9" }

lume_session = { path = "../lume_session" }
lume_span = { path = "../lume_span" }
lume_type_metadata = { path = "../lume_type_metadata" }
lume_types = { path = "../lume_types" }

[lints]
workspace = true
